# fospx-kernel-mgr

./: .gitignore  README.md  pyproject.toml  setup.py
debian/: changelog  control  copyright  fospx-kernel-mgr.desktop  install  rules
fospx_kernel_mgr/cli/: main.py
fospx_kernel_mgr/core/: grub.py  kconfig.py  kernel.py  safety.py
fospx_kernel_mgr/gui/: main.py
